--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Data files
+wikipedia-movies.json
+movies_metadata.csv
+ratings.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
